Fix codepen tag

--- a/app/_projects/6. codepen-add-remove.md
+++ b/app/_projects/6. codepen-add-remove.md
@@ -1,6 +1,6 @@
 ---
 title: Add + Remove
-tag: codepen-add-remove
+tag: codepen
 link: http://codepen.io/wlindner/pen/IKGJi
 thumbnail: add-remove.png
 type: Fun
